--- a/poke_dex_app/pubspec.yaml
+++ b/poke_dex_app/pubspec.yaml
@@ -25,12 +25,9 @@ dependencies:
     sdk: flutter
   flutter_redux:
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-
 dev_dependencies:
+  build_runner:
+  flutter_gen_runner:
   flutter_test:
     sdk: flutter
 
