--- a/poke_dex_app/pubspec.yaml
+++ b/poke_dex_app/pubspec.yaml
@@ -73,3 +73,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_gen:
+  colors:
+    inputs:
+      - assets/color/colors.xml
