--- a/poke_dex_app/analysis_options.yaml
+++ b/poke_dex_app/analysis_options.yaml
@@ -13,6 +13,7 @@ analyzer:
   exclude:
 #    - "**/*.g.dart"
 #    - "**/*.freezed.dart"
+    - "**/*.gen.dart"
     - "**/*mocks.dart"
   strong-mode:
     implicit-casts: false
