--- a/poke_dex_app/pubspec.yaml
+++ b/poke_dex_app/pubspec.yaml
@@ -33,6 +33,7 @@ dev_dependencies:
   flutter_lints:
   flutter_test:
     sdk: flutter
+  mockito:
   poke_api_client:
     path: ../poke_api_client
 
